#/********************************************************************************************************************** 
# * THE OMEGA LIB PROJECT
# *---------------------------------------------------------------------------------------------------------------------
# * Copyright 2010								Electronic Visualization Laboratory, University of Illinois at Chicago
# * Authors:										
# *  [Author]									[Mail]
# *---------------------------------------------------------------------------------------------------------------------
# * [LICENSE NOTE]
# *---------------------------------------------------------------------------------------------------------------------
# * [SUMMARY OF FILE CONTENTS]
# *********************************************************************************************************************/

#######################################################################################################################
# Compile definitions
ADD_DEFINITIONS( )

#######################################################################################################################
# Source files
SET( srcs 
        playground.cpp
		PlaygroundApplication.cpp
		PlaygroundUI.cpp
        )
    
#######################################################################################################################
# Headers
SET( headers 
		PlaygroundApplication.h
		PlaygroundUI.h
        ) 
        
#######################################################################################################################
# Setup compile info
ADD_EXECUTABLE( playground ${srcs} ${headers})

#######################################################################################################################
# Setup link info.
TARGET_LINK_LIBRARIES( playground
	omega outils)


