#/********************************************************************************************************************** 
# * THE OMEGA LIB PROJECT
# *---------------------------------------------------------------------------------------------------------------------
# * Copyright 2010								Electronic Visualization Laboratory, University of Illinois at Chicago
# * Authors:										
# *  [Author]									[Mail]
# *---------------------------------------------------------------------------------------------------------------------
# * [LICENSE NOTE]
# *---------------------------------------------------------------------------------------------------------------------
# * [SUMMARY OF FILE CONTENTS]
# *********************************************************************************************************************/

#######################################################################################################################
# Compile definitions
ADD_DEFINITIONS( )

#######################################################################################################################
# Source files
SET( srcs 
        nightfield.cpp
		NightfieldApplication.cpp
		NightfieldUI.cpp
        )
    
#######################################################################################################################
# Headers
SET( headers 
		NightfieldApplication.h
		NightfieldUI.h
        ) 
        
#######################################################################################################################
# Setup compile info
ADD_EXECUTABLE( nightfield ${srcs} ${headers})

#######################################################################################################################
# Setup link info.
TARGET_LINK_LIBRARIES( nightfield
	omega omega)


